--- a/BookStore-API/appsettings.json
+++ b/BookStore-API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookStore_API-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=HawkDotNet\\SQLEXPRESS;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -11,3 +11,4 @@
   },
   "AllowedHosts": "*"
 }
+
