authorization and athentication enabled , jwt tock and bearer implimented .

--- a/BookStore-API/appsettings.json
+++ b/BookStore-API/appsettings.json
@@ -9,6 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "74309be9-027f-4aa1-b77f-fe6bc48247c7",
+    "Issuer": "DeepRootsClassic.com"
+  }
 }
 
