--- a/BookStore-UI/Properties/launchSettings.json
+++ b/BookStore-UI/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:57253",
+      "applicationUrl": "http://localhost:57255",
       "sslPort": 44360
     }
   },
@@ -18,10 +18,10 @@
     "BookStore-UI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
